--- a/TBA/BONHistoryStoryboard.storyboard
+++ b/TBA/BONHistoryStoryboard.storyboard
@@ -18,7 +18,75 @@
                     <view key="view" contentMode="scaleToFill" id="Ku9-nh-9Sl">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pbt-V9-hky">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
+                                <color key="barTintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="History" id="kMi-PB-iqe">
+                                        <barButtonItem key="rightBarButtonItem" title="New Meal" id="0ae-Er-NCo">
+                                            <connections>
+                                                <action selector="createNewMeal:" destination="2iV-YH-OHz" id="i7b-os-C2j"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="a4L-wW-XGl">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="loggedMeal" rowHeight="100" id="ZtN-Ro-wLL">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZtN-Ro-wLL" id="X3u-2c-s36">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="99.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="When" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7cn-Zr-dHn">
+                                                    <rect key="frame" x="25" y="8" width="348" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="how5" translatesAutoresizingMaskIntoConstraints="NO" id="CeF-wD-WrP">
+                                                    <rect key="frame" x="485" y="1" width="79" height="99"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="What" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Of3-Hh-lNz">
+                                                    <rect key="frame" x="25" y="27" width="270" height="65"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="CeF-wD-WrP" secondAttribute="trailing" multiplier="1.05" id="8rC-Vb-HDa"/>
+                                                <constraint firstItem="CeF-wD-WrP" firstAttribute="height" secondItem="X3u-2c-s36" secondAttribute="height" id="9FQ-Ul-no1"/>
+                                                <constraint firstItem="CeF-wD-WrP" firstAttribute="centerY" secondItem="X3u-2c-s36" secondAttribute="centerY" id="W75-rv-3jZ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="2iV-YH-OHz" id="f8p-be-cS6"/>
+                                    <outlet property="delegate" destination="2iV-YH-OHz" id="ifc-33-5g2"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Pbt-V9-hky" firstAttribute="centerX" secondItem="Ku9-nh-9Sl" secondAttribute="centerX" id="C7M-fq-sDR"/>
+                            <constraint firstItem="Pbt-V9-hky" firstAttribute="top" secondItem="8Js-uX-CZn" secondAttribute="bottom" id="DKP-kI-jno"/>
+                            <constraint firstItem="a4L-wW-XGl" firstAttribute="width" secondItem="Ku9-nh-9Sl" secondAttribute="width" id="EAb-41-W3g"/>
+                            <constraint firstItem="LbM-P1-xsJ" firstAttribute="top" secondItem="a4L-wW-XGl" secondAttribute="bottom" id="Mjq-mH-f62"/>
+                            <constraint firstItem="a4L-wW-XGl" firstAttribute="centerX" secondItem="Ku9-nh-9Sl" secondAttribute="centerX" id="eaY-dr-v7s"/>
+                            <constraint firstItem="a4L-wW-XGl" firstAttribute="top" secondItem="Pbt-V9-hky" secondAttribute="bottom" id="fnM-wQ-lXx"/>
+                            <constraint firstItem="Pbt-V9-hky" firstAttribute="width" secondItem="Ku9-nh-9Sl" secondAttribute="width" id="sia-MX-vHc"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Urc-SQ-Tzh" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -36,6 +104,11 @@
                         <navigationBar key="tableHeaderView" contentMode="scaleToFill" id="Bey-Yb-n1R">
                             <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
+                            <color key="barTintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                            <textAttributes key="titleTextAttributes">
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </textAttributes>
                             <items>
                                 <navigationItem title="History" id="QNU-VK-q07">
                                     <barButtonItem key="rightBarButtonItem" title="New Meal" id="PMN-zc-p21">
@@ -83,10 +156,33 @@
                             <outlet property="delegate" destination="2iV-YH-OHz" id="WO6-Fl-lwK"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="tI9-BZ-81W"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MOn-5A-oxW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1161" y="387"/>
+            <point key="canvasLocation" x="1944" y="387"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Fzy-ug-FnV">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="ieo-Ut-dos" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="IIB-Uk-CvK">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="he1-LV-nD9">
+                        <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
+                    <connections>
+                        <segue destination="2iV-YH-OHz" kind="relationship" relationship="rootViewController" id="Vdd-lh-UBH"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A5t-uJ-AfG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1132" y="387"/>
         </scene>
     </scenes>
     <resources>
